.provarCaches/00D5f000005vwGkEAI/objects/rstk__icshrtlist__c.object
<CustomObject>
    <description>icshrtlist__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icshrtlist_genopt__c &amp; &apos;_&apos; &amp; rstk__icshrtlist_usrno__r.Name &amp; &apos;_&apos; &amp; rstk__icshrtlist_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp; rstk__icshrtlist_site__r.rstk__sysite_site__c &amp;
IF ( ISBLANK( rstk__icshrtlist_proj__c ), &apos;_NULLPROJ&apos;, (&apos;_&apos; &amp; rstk__icshrtlist_proj__r.rstk__pjproj_proj__c)) &amp;
IF ( ISBLANK( rstk__icshrtlist_item__c), &apos;&apos;, (&apos;_&apos; &amp; rstk__icshrtlist_item__r.rstk__icitem_item__r.rstk__peitem_item__c )) &amp;
IF ( ISBLANK( rstk__icshrtlist_ordno__c), &apos;&apos;, (&apos;_&apos; &amp; rstk__icshrtlist_ordno__c)) &amp;
IF ( ISBLANK( rstk__icshrtlist_ordlne__c), &apos;&apos;, (&apos;_&apos; &amp; TEXT(rstk__icshrtlist_ordlne__c))) &amp; &apos;_&apos; &amp;
TEXT( rstk__icshrtlist_dmdthrudate__c ) &amp; &apos;_&apos; &amp; TEXT(NOW())</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_comments__c</fullName>
        <inlineHelpText>These are Comments associated with this Shortage List</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Division associated with this Shortage List</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Shortage Report</relationshipLabel>
        <relationshipName>sydivicshrtlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_dmdthrudate__c</fullName>
        <inlineHelpText>The report will only include demands that are required up to and including this date.</inlineHelpText>
        <label>Demand To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_genopt__c</fullName>
        <inlineHelpText>These options determine what mode the report will be run for.  Choices are All Items (Note: If you want all Items and all Projects, select &apos;None&apos; in Project field), Single Item, a specific Work Order, a specific Subcontract PO Line or a specific SO Line.</inlineHelpText>
        <label>Generate Options</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Item Number of the Item that is short.</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory Shortage Report</relationshipLabel>
        <relationshipName>icitemicshrtlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_ordlne__c</fullName>
        <inlineHelpText>This is the Order Line Number of the Demand</inlineHelpText>
        <label>Line No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_ordno__c</fullName>
        <inlineHelpText>This is the Order Number of the Demand</inlineHelpText>
        <label>Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_ordtyp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_proj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Project Number of the Demand</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inventory Shortage Report</relationshipLabel>
        <relationshipName>pjprojicshrtlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Site associated with this Shortage List</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inventory Shortage Report</relationshipLabel>
        <relationshipName>sysiteicshrtlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_supcovopt__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, supplies will be considerd to cover the demand quantity required through the ‘Demand Thru Date’ thus reducing the Quantity Short calculated.</inlineHelpText>
        <label>Supply Cover Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icshrtlist_usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Manufacturing User requesting this Shortage Report</inlineHelpText>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Inventory Shortage Report</relationshipLabel>
        <relationshipName>syusricshrtlists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Shortage Report</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Shortage Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>